Add AsyncQueue Add ES5 Function.prototype.bind shim Add Mocha Update Cakefile (test)

--- a/package.json
+++ b/package.json
@@ -27,7 +27,9 @@
     "browserify": "~2.35.2",
     "uglify-js": "~2.4.3"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "mocha": "~1.14.0"
+  },
   "bundledDependencies": [],
   "license": "MIT",
   "engines": {
