Replace AsyncQueue with sequence Remove ES5 Function.prototype.bind shim Add Random Helper Replace assert.strictEqual ..., true with assert.ok Move TypewriterBuilder to a separate file Update Cakefile Implement clear, waitRange, wait, put methods

--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   ],
   "scripts": {
     "test": "echo Not Implemented!",
-    "postinstall": "node_modules/coffee-script/bin/cake all"
+    "postinstall": "cake all"
   },
   "main": "./build/typewriter",
   "repository": {
@@ -25,7 +25,8 @@
   "dependencies": {
     "coffee-script": "~1.6.3",
     "browserify": "~2.35.2",
-    "uglify-js": "~2.4.3"
+    "uglify-js": "~2.4.3",
+    "sequence": "~2.2.1"
   },
   "devDependencies": {
     "mocha": "~1.14.0"
