Implement Sequence Implement PrioritySequence Fix Random Helper assertion error messages Remove coolaj86's Sequence module Update README.md

--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
   "dependencies": {
     "coffee-script": "~1.6.3",
     "browserify": "~2.35.2",
-    "uglify-js": "~2.4.3",
-    "sequence": "~2.2.1"
+    "uglify-js": "~2.4.3"
   },
   "devDependencies": {
     "mocha": "~1.14.0"
