--- a/package.json
+++ b/package.json
@@ -23,13 +23,13 @@
     "typewriter"
   ],
   "dependencies": {
-    "coffee-script": "~1.7.1",
-    "browserify": "~4.2.1",
-    "uglify-js": "~2.4.15"
+    "coffee-script": "~1.9.3",
+    "browserify": "~10.2.4",
+    "uglify-js": "^2.4.23"
   },
   "devDependencies": {
-    "mocha": "~1.20.1",
-    "archiver": "~0.10.1"
+    "mocha": "~2.2.5",
+    "archiver": "~0.14.4"
   },
   "bundledDependencies": [],
   "license": "MIT",
