Add deleteAll method

--- a/package.json
+++ b/package.json
@@ -7,6 +7,10 @@
     {
       "name": "Fardjad Davari",
       "email": "public@fardjad.com"
+    },
+    {
+      "name": "Felipe Paul Martins",
+      "email": "felipe.paulmartins@outlook.com"
     }
   ],
   "scripts": {
