--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "typewriter",
-  "version": "0.2.1",
+  "version": "0.2.2",
   "author": "Fardjad Davari <public@fardjad.com>",
   "description": "A library for simulating typewriter effect in the browser",
   "contributors": [
@@ -27,13 +27,13 @@
     "typewriter"
   ],
   "dependencies": {
-    "browserify": "^11.2.0",
-    "coffee-script": "^1.10.0",
-    "uglify-js": "^2.4.24"
+    "browserify": "^14.4.0",
+    "coffeescript": "^1.12.7",
+    "uglify-js": "^3.0.27"
   },
   "devDependencies": {
-    "archiver": "^0.15.1",
-    "mocha": "^2.3.3"
+    "archiver": "^2.0.0",
+    "mocha": "^3.5.0"
   },
   "bundledDependencies": [],
   "license": "MIT",
